🚧 Fix nav links + column overlap, add jump btn

--- a/Home.css
+++ b/Home.css
@@ -202,6 +202,13 @@
 }
 
 @media (max-width: 1199px) {
+
+  /* Custom fixes */
+  .kb-column-fix-1 {
+    padding-bottom: 200px !important;
+  }
+
+  /* End custom fixes */
   .u-section-2 .u-group-1 {
     width: 349px;
     height: auto;
@@ -611,9 +618,9 @@
   margin: 0 auto 0 0;
 }
 
-.u-section-6 .u-text-2 {
+/* .u-section-6 .u-text-2 {
   margin: 50px 105px 0 115px;
-}
+} */
 
 .u-section-6 .u-image-1 {
   height: 668px;
@@ -622,9 +629,9 @@
   margin: 50px auto 0;
 }
 
-.u-section-6 .u-text-3 {
+/* .u-section-6 .u-text-3 {
   margin: 100px 105px 0 115px;
-}
+} */
 
 .u-section-6 .u-image-2 {
   width: 1000px;
@@ -700,15 +707,15 @@
 }
 
 .u-section-6 .u-container-layout-4 {
-  padding: 30px;
+  padding: 0 30px;
 }
 
 .u-section-6 .u-container-layout-5 {
-  padding: 30px;
+  padding: 0 30px;
 }
 
 .u-section-6 .u-container-layout-6 {
-  padding: 30px;
+  padding: 0 30px;
 }
 
 @media (max-width: 1199px) {
@@ -1080,4 +1087,17 @@
   .u-section-8 .u-accordion-1 {
     width: 340px;
   }
+}
+
+/* KB CUSTOM */
+
+.jump-arrow {
+  margin: auto;
+  max-width: 44px;
+  padding-bottom: 60px;
+}
+
+/* Helper class to rotate graphics */
+.rotate-180 {
+  transform: rotate(180deg);
 }
